--- a/NoPrismMVVM/NoPrismMVVM.WPF/MainWindow.xaml
+++ b/NoPrismMVVM/NoPrismMVVM.WPF/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NoPrismMVVM.WPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        MinHeight="10" MinWidth="10">
     <Grid>
         
     </Grid>
